noel update full

--- a/Noel/gift.html
+++ b/Noel/gift.html
@@ -4,8 +4,8 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Gift</title>
-	<link rel="stylesheet" type="text/css" href="stylesheet.css">
-	<link rel="stylesheet" type="text/css" href="gift.css">
+	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
+	<link rel="stylesheet" type="text/css" href="css/gift.css">
 
 </head>
 <body>
@@ -18,7 +18,7 @@
 			<img src="img/pine.png">
 		</div>
 		<div class="back">
-			<a href="index.html"><= Back</a>
+			<a href="noel.html"></a>
 		</div>
 		<div class="gift">
 			<img src="img/gift.png" alt="gift" title="Click để mở ngay!">
@@ -27,12 +27,17 @@
 			<div class="card">
 				<div class="title_card">
 					<h1>
-						<i class="m">M</i><i class="e">e</i><i class="r1">r</i><i class="r2">r</i><i class="y">y</i><br/>
-						<i class="christmas">Christmas</i>
+						<i class="m">M</i><i class="e">E</i><i class="r1">R</i><i class="r2">R</i><i class="y">Y</i><br/>
+						<i class="christmas">X-MAS</i>
 					</h1>
 				</div>
 				<div class="content_card">
-					<p>we wish you a merry christmas!</p>
+					<div class="text_main">
+						<p>Chúc em Noel ấm áp, an lành, vui vẻ, hạnh phúc nhé!</p>
+					</div>
+					<div class="text_sp">
+						<p>Bonus: Nếu rảnh cũng có thể dẫn anh đi chơi...))</p>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -51,7 +56,7 @@
   </div>
 
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-	<script type="text/javascript" src="script.js"></script>
+	<script type="text/javascript" src="js/script.js"></script>
 	
 </body>
 </html>
