--- a/Noel/index.html
+++ b/Noel/index.html
@@ -1,72 +1,73 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+
+<!-- Language -->
+<html lang="vn">
+
 <head>
-    <meta charset="utf-8">
-    <title>MerryXmas</title>
-    <link rel="stylesheet" type="text/css" href="stylesheet.css">
-    <link rel="stylesheet" type="text/css" href="main.css">
+
+<!-- Format Unicode -->
+<meta charset="UTF-8">
+
+<!-- Browser -->
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
+
+<!-- View Port -->
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<!-- Title -->
+<title>Happy Birthday</title>
+
+<!-- Roboto Fonts -->
+<link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:700' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Roboto:100' rel='stylesheet' type='text/css'>
+
+<!-- Default CSS -->
+<link rel="stylesheet" type="text/css" href="./css/styles.css">
 </head>
 <body>
-    <!-- <audio controls autoplay loop>
-        <source src="music/Santa-Claus-Sound-Effect.mp3" type="audio/mpeg">
-    </audio> -->
-    <iframe id="music" src="music/Santa-Claus-Sound-Effect.mp3" loop allow="autoplay" style="display:none" id="iframeAudio"></iframe>
-    <div class="santa_l">
-        <img class="santa" src="img/santa.png"/>
-    </div>
-    <div>
-        <img class="house" src="img/nha2.png"/>
-    </div>
-    <div class="qua">
-        <div class="qua1">
-            <img src="img/qua2.png"/>
-        </div>
-        <div class="qua2">
-            <img src="img/qua3.png"/>
-        </div>
-        <div class="qua3">
-            <img src="img/qua4.png"/>
-        </div>
-        <div class="qua4">
-            <img src="img/qua1.png"/>
-        </div>
-        <div class="qua5">
-            <img src="img/qua2.png"/>
-        </div>
-        <div class="qua6">
-            <img src="img/qua3.png"/>
-        </div>
-        <div class="qua7">
-            <img src="img/qua4.png"/>
-        </div>
-        <div class="qua8">
-            <img src="img/qua1.png"/>
-        </div>
-        <div class="qua9">
-            <img src="img/qua2.png"/>
-        </div>
-        <div class="qua10">
-            <img src="img/qua3.png"/>
-        </div>
-    </div>
+    <iframe id="music" src="music/yukinohana.mp3" loop allow="autoplay" style="display:none" id="iframeAudio"></iframe>
+<div class="htmleaf-container">
+	<div class="wrapper">
+		<div class="container">
+		
+			<!-- Title Effect -->
+			<h1>Hi Hạnh ^^</h1>
+			
+			<!-- Form Login -->
+			<form class="form">
+				<input id="userName" name="userName" type="text" placeholder="Tên đăng nhập"> <!-- Default: user -->
+				<input id="pwd" name="pwd" type="password" placeholder="Mật khẩu"> <!-- Default: pass -->
+                <button type="submit" id="login-button">Đăng nhập</button>
+                <div class="hint">
+                    <p>* Gợi ý </p>
+                    <p>1. Tên đăng nhập: Gồm 6 kí tự, 4 kí tự đầu là tên một loại cây có thể ăn được, 2 ký tự sau là số ván caro em đánh thắng anh...))</p>
+                    <p>2. Mật khẩu: Gồm 8 chữ số, 6 chữ số đầu là một ngày đặc biệt, 2 chữ số cuối là ngày đầu tiên mình đi học với nhau ><</p>
+                    <p class="hint_sp">! Nếu không biết có thể ib để nhận được sự trợ giúp...))</p>
+                </div>
+			</form>
+		</div>
+		
+		<ul class="bg-bubbles">
+			<li class="png"><img src="img/png2.png"></li>
+			<li class="text_sp">26</li>
+			<li class="png"><img src="img/png2.png"></li>
+			<li class="png"><img src="img/png2.png"></li>
+            <li class="png"><img src="img/png1.png"></li>
+			<li class="png"><img src="img/pine.png"></li>
+            <li class="png"><img src="img/png2.png"></li>
+			<li class="png"><img src="img/png2.png"></li>
+            <li class="png"><img src="img/pine.png"></li>
+            <li class="png"><img src="img/png2.png"></li>
+            <li class="png"><img src="img/png1.png"></li>
+            <li class="png"><img src="img/png1.png"></li>
+		</ul>
+	</div>
+</div>
 
-    <div class="btn_gift">
-        <button onclick="window.location.href='gift.html'">Open now!</button>
-    </div>
-    <!-- copy snow -->
-    <div class="winter-is-coming">
+<script src="./js/jquery-2.1.1.min.js" type="text/javascript"></script><!-- JQuery -->
 
-      <div class="snow snow--near"></div>
-      <div class="snow snow--near snow--alt"></div>
-
-      <div class="snow snow--mid"></div>
-      <div class="snow snow--mid snow--alt"></div>
-
-      <div class="snow snow--far"></div>
-      <div class="snow snow--far snow--alt"></div>
-  </div>
-
-
+<!-- [!] PASSWORD HERE [!] -->
+<script src="./js/password.js" type="text/javascript"></script> <!-- Default info user/pass -->
 
 </body>
 </html>
