--- a/WebCodeGirlDemo/index.html
+++ b/WebCodeGirlDemo/index.html
@@ -62,19 +62,19 @@
                         </div>
                         <ul class="menu-list">
                             <li class="menu-items">
-                                <a class="menu-links" href="#">New</a>
+                                <a class="menu-links" href="shop.html">New</a>
                             </li>
                             <li class="menu-items">
-                                <a class="menu-links" href="#">Wonmen</a>
+                                <a class="menu-links" href="shop.html">Women</a>
                             </li>
                             <li class="menu-items">
-                                <a class="menu-links" href="#">Men</a>
+                                <a class="menu-links" href="shop.html">Men</a>
                             </li>
                             <li class="menu-items">
-                                <a class="menu-links" href="#">Art of Living</a>
+                                <a class="menu-links" href="shop.html">Art of Living</a>
                             </li>
                             <li class="menu-items">
-                                <a class="menu-links" href="#">Magazine</a>
+                                <a class="menu-links" href="shop.html">Magazine</a>
                             </li>
                         </ul>
                     </nav>
