--- a/WebCodeGirlDemo/shop.html
+++ b/WebCodeGirlDemo/shop.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <title>Web CodeGirl Demo</title>
@@ -62,19 +63,19 @@
                         </div>
                         <ul class="menu-list">
                             <li class="menu-items">
-                                <a class="menu-links" href="#">New</a>
+                                <a class="menu-links" href="shop.html">New</a>
                             </li>
                             <li class="menu-items">
-                                <a class="menu-links" href="#">Wonmen</a>
+                                <a class="menu-links" href="shop.html">Women</a>
                             </li>
                             <li class="menu-items">
-                                <a class="menu-links" href="#">Men</a>
+                                <a class="menu-links" href="shop.html">Men</a>
                             </li>
                             <li class="menu-items">
-                                <a class="menu-links" href="#">Art of Living</a>
+                                <a class="menu-links" href="shop.html">Art of Living</a>
                             </li>
                             <li class="menu-items">
-                                <a class="menu-links" href="#">Magazine</a>
+                                <a class="menu-links" href="shop.html">Magazine</a>
                             </li>
                         </ul>
                     </nav>
