--- a/NgaoBlog/index.html
+++ b/NgaoBlog/index.html
@@ -22,7 +22,7 @@
                 <nav class="navbar navbar-expand-lg navbar-light bg-light">
                     <div class="nav-home d-flex justify-content-between">
                         <div class="nav-home-text">
-                            <a class="navbar-brand" href="#">Ngao's</a>
+                            <a class="navbar-brand" href="index.html">Ngao's</a>
                         </div>
                         <div class="nav-toggler-icon">
                             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
@@ -34,13 +34,13 @@
                     <div class="collapse navbar-collapse" id="navbarNavDropdown">
                         <ul class="navbar-nav ml-auto">
                             <li class="nav-item active">
-                                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                                <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">About</a>
+                                <a class="nav-link" href="about.html">About</a>
                             </li>
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink"
+                                <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdownMenuLink"
                                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     Blog
                                 </a>
@@ -51,7 +51,7 @@
                                 </div>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Contact</a>
+                                <a class="nav-link" href="about.html">Contact</a>
                             </li>
                         </ul>
                     </div>
