--- a/NgaoBlog/index.html
+++ b/NgaoBlog/index.html
@@ -45,9 +45,9 @@
                                     Blog
                                 </a>
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                    <a class="dropdown-item" href="#">My Story</a>
-                                    <a class="dropdown-item" href="#">My work</a>
-                                    <a class="dropdown-item" href="#">Travel</a>
+                                    <a class="dropdown-item" href="blog.html">My Story</a>
+                                    <a class="dropdown-item" href="blog.html">My work</a>
+                                    <a class="dropdown-item" href="blog.html">Travel</a>
                                 </div>
                             </li>
                             <li class="nav-item">
