--- a/Noel/index.html
+++ b/Noel/index.html
@@ -31,25 +31,21 @@
 		<div class="container">
 		
 			<!-- Title Effect -->
-			<h1>Hi Hạnh ^^</h1>
+			<h1>Hi Ngọc.. ^^</h1>
 			
 			<!-- Form Login -->
 			<form class="form">
-				<input id="userName" name="userName" type="text" placeholder="Tên đăng nhập"> <!-- Default: user -->
+				<input id="userName" name="userName" type="text" placeholder="Tên đăng nhập" value="ngao"> <!-- Default: user -->
 				<input id="pwd" name="pwd" type="password" placeholder="Mật khẩu"> <!-- Default: pass -->
                 <button type="submit" id="login-button">Đăng nhập</button>
                 <div class="hint">
-                    <p>* Gợi ý </p>
-                    <p>1. Tên đăng nhập: Gồm 6 kí tự, 4 kí tự đầu là tên một loại cây có thể ăn được, 2 ký tự sau là số ván caro em đánh thắng anh...))</p>
-                    <p>2. Mật khẩu: Gồm 8 chữ số, 6 chữ số đầu là một ngày đặc biệt, 2 chữ số cuối là ngày đầu tiên mình đi học với nhau ><</p>
-                    <p class="hint_sp">! Nếu không biết có thể ib để nhận được sự trợ giúp...))</p>
+                    <p>* Pass tự đoán nhé..)) </p>
                 </div>
 			</form>
 		</div>
 		
 		<ul class="bg-bubbles">
 			<li class="png"><img src="img/png2.png"></li>
-			<li class="text_sp">26</li>
 			<li class="png"><img src="img/png2.png"></li>
 			<li class="png"><img src="img/png2.png"></li>
             <li class="png"><img src="img/png1.png"></li>
