--- a/Noel/gift.html
+++ b/Noel/gift.html
@@ -33,10 +33,10 @@
 				</div>
 				<div class="content_card">
 					<div class="text_main">
-						<p>Chúc em Noel ấm áp, an lành, vui vẻ, hạnh phúc nhé!</p>
+						<p>Chúc em Giáng sinh ấm áp, an lành nhé!</p>
 					</div>
 					<div class="text_sp">
-						<p>Bonus: Nếu rảnh cũng có thể dẫn anh đi chơi...))</p>
+						<p>Bonus: May mắn..))</p>
 					</div>
 				</div>
 			</div>
